--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.5.1",
     "@react-navigation/drawer": "^5.7.7",
     "@react-navigation/native": "^5.4.2",
     "@react-navigation/stack": "^5.3.9",
     "expo": "~37.0.3",
+    "expo-image-picker": "~8.1.0",
     "expo-mail-composer": "~8.1.0",
     "expo-permissions": "~8.1.0",
     "expo-secure-store": "~8.1.0",
